# haskell-torch

./: .ghci  .gitignore  .gitmodules  .hlint.yaml  .stylish-haskell.yaml  ChangeLog.md  LICENSE  Matplotlib_in_IHaskell_demo.ipynb  Plugins.html  Plugins.ipynb  README.md  T01_Basics.html  T01_Basics.ipynb  cabal.project  common-paths.yaml  default.nix  environment-cpu-only.yml  environment-with-jupyter-cpu-only.yml  environment-with-jupyter.yml  environment.yml  generate-config.py  hie.yaml  ihaskell-dynamic.diff  makefile  setup.sh  shell-with-jupyter.nix  shell.nix  stack.yaml
.circleci/: config.yml
dataframe/: dataframe.cabal  package.yaml
dataframe/src/Barbies/: FieldName.hs  TH.hs
dataframe/src/Barbies/TH/: Config.hs
dataframe/src/Generics/SOP/: Record.hs
dataframe/src/Generics/SOP/Record/: Combination.hs  SubTyping.hs
dataframe/src/Text/: Tabulate.hs
default-type-plugin/: LICENSE  README.md  default-type-plugin.cabal
default-type-plugin/src/Plugin/: DefaultType.hs
default-type-plugin/tests/: Main.hs
docker/basic/: Dockerfile
docker/basic-cpu/: Dockerfile
docker/cuda/: Dockerfile
docker/jupyter-cpu/: Dockerfile
docker/jupyter-cuda/: Dockerfile
docopt/System/Console/Docopt/: Public.hs  QQ.hs
docs/: Basics.lhs  conf.py  index.rst
haskell-torch/: README.md  haskell-torch.cabal  package.yaml
haskell-torch-cbindings/: README.md  haskell-torch-cbindings.cabal  package.yaml
haskell-torch-cbindings/src/Torch/C/: CUDA.hs  Generator.hs  Language.hs  Scalar.hs  Tensor.hs  Types.hs  Variable.hs
haskell-torch-datasets/: README.md  haskell-torch-datasets.cabal  package.yaml
haskell-torch-datasets/src/Torch/: Datasets.hs
haskell-torch-datasets/src/Torch/Datasets/Vision/: CIFAR.hs
haskell-torch-examples/: haskell-torch-examples.cabal  package.yaml
haskell-torch-examples/src/Torch/Tutorial/: Tensorboard.hs
haskell-torch-examples/src/Torch/Tutorial/Intro/: T01_Basics.hs  T01_Basics.ipynb  T02_LinearRegression.hs  T03_LogisticRegression.hs  T04_FeedforwardNN.hs  T05_CNN.hs  T06_ResNet.hs  T07_RNN.hs  T08_BiRNN.hs  T10_GAN.hs  T11_VAE.hs
haskell-torch-examples/src/Torch/Tutorial/RL/: Simple.hs
haskell-torch-imagemagick/: README.md  haskell-torch-imagemagick.cabal  package.yaml
haskell-torch-imagemagick/src/Foreign/: ImageMagick.hs
haskell-torch-imagemagick/src/Foreign/ImageMagick/: Types.hs
haskell-torch-matio/: README.md  Setup.hs  haskell-torch-matio.cabal  package.yaml
haskell-torch-matio/src/Foreign/: Matio.hs
haskell-torch-matio/src/Foreign/Matio/: Types.hs
haskell-torch-models/: README.md  Setup.hs  haskell-torch-models.cabal  package.yaml
haskell-torch-models/src/Torch/Models/Vision/: AlexNet.hs  ResNet.hs  VGG19.hs
haskell-torch-tensorboard-proto/: README.md  haskell-torch-tensorboard-proto.cabal  package.yaml
haskell-torch-tools/: README.md  haskell-torch-tools.cabal  package.yaml
haskell-torch-tools/app/: GenerateCTensor.hs
haskell-torch-tools/src/: Types.hs
haskell-torch/src/: Torch.hs
haskell-torch/src/Torch/: Images.hs  Indexing.hs  Initialization.hs  Inplace.hs  Misc.hs  Operators.hs  Optimizer.hs  StoredModel.hs  Tensor.hs  Tensorboard.hs  Types.hs  Visualization.hs
haskell-torch/src/Torch/Datasets/: Augmentation.hs  Common.hs
haskell-torch/src/Torch/Datasets/Vision/: CIFAR.hs  MNIST.hs
haskell-torch/src/Torch/Models/Vision/: AlexNet.hs  VGG19.hs
haskell-torch/src/Torch/Tutorial/: README.md  Tensorboard.hs
haskell-torch/src/Torch/Tutorial/Intro/: T01_Basics.hs  T02_LinearRegression.hs  T03_LogisticRegression.hs  T04_FeedforwardNN.hs  T05_CNN.hs  T06_ResNet.hs  T07_RNN.hs  T08_BiRNN.hs  T09_LanguageModel.hs  T10_GAN.hs  T11_VAE.hs
haskell-torch/test/: Spec.hs  doctest.json
ihaskell-matplotlib/: ihaskell-matplotlib.cabal  package.yaml
ihaskell-matplotlib/IHaskell/Display/: Matplotlib.hs
interpolateIO/: LICENSE  README.markdown  interpolateIO.cabal  package.yaml
interpolateIO/src/Data/String/: InterpolateIO.hs  ShowIO.hs
interpolateIO/src/Data/String/InterpolateIO/: Compat.hs  IsString.hs  Parse.hs  Util.hs
interpolateIO/src/Data/String/InterpolateIO/Internal/: Util.hs
interpolateIO/test/: doctests.hs
interpolateIO/test/Data/String/: InterpolateIOSpec.hs
interpolateIO/test/Data/String/InterpolateIO/: IsStringSpec.hs  ParseSpec.hs  UtilSpec.hs
interpolateIO/test/Data/String/InterpolateIO/Internal/: UtilSpec.hs
nix/: sources.json
patches/: ambiguity-plugins-no-tests-ghc-8.10.3.patch  ihaskell-fixup-set-0.10.2.1.patch  ihaskell-fixup-set-master-nov-01-2021.patch  jupyter-nbconvert-fix-theme-6.1.patch  jupytext-add-haskell.patch
scripts/: generate-config.py  setup-conda.sh  setup-haskell-depends.sh  setup-haskell-snapshot.sh  setup-haskell.sh  setup-initial.sh  setup-jupyter.sh
simplify-nat-algebra-plugin/: LICENSE  README.md  simplify-nat-algebra-plugin.cabal
simplify-nat-algebra-plugin/src/Plugin/: SimplifyNat.hs
simplify-nat-algebra-plugin/tests/: Main.hs
