name:                default-type-plugin
version:             0.1
synopsis:            Unlock the power of type defaulting
description:         Tired of ambiguity errors? Want a more powerful defaulting mechanism?
                     Look no further.
homepage:            http://github.com/abarbu/haskell-torch/default-type-plugin
bug-reports:         http://github.com/abarbu/haskell-torch/default-type-plugin
license:             BSD2
license-file:        LICENSE
author:              Andrei Barbu
maintainer:          andrei@0xab.com
copyright:           Copyright © 2020 Andrei Barbu
category:            Type System
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/abarbu/default-type-plugin.git

flag deverror
  description:
    Enables `-Werror` for development mode and TravisCI
  default: False
  manual: True

library
  exposed-modules:     Plugin.DefaultType
  build-depends:       base >= 4.8,
                       ghc  >= 8.10.2,
                       containers
  hs-source-dirs:      src
  default-language:    Haskell2010
